# wanted_pre_onboarding

./: .gitignore  README.md  pyproject.toml
onboarding/company/: models.py  serializers.py  urls.py  views.py
onboarding/jopPosting/: apps.py  models.py  serializers.py
onboarding/onboarding/: settings.py  urls.py  wsgi.py
onboarding/user/: models.py  serializers.py  urls.py  views.py
