[tool.poetry]
name = "wanted_pre_onboarding"
version = "0.1.0"
description = ""
authors = ["NOne"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
drf-yasg = "^1.20.0"
gunicorn = "^20.1.0"
django-dotenv = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
